<resources>
    <string name="app_name">BeOne Mart</string>
    <string name="title_activity_login">BeOne Mart</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_select_group">Select Group</string>
    <string name="title_activity_select_member">Select Member</string>
    <string name="title_activity_visit">Visit</string>
    <string name="title_activity_give_stock">Give Stock</string>
    <string name="title_activity_return_stock">Return Stock</string>
    <string name="title_activity_check_stock">Check Stock</string>
    <string name="title_activity_sold_stock">Sold Stock</string>
    <string name="title_activity_sold_all_stock">Sold Stock</string>
    <string name="title_activity_direct_sale_stock">Sold Stock</string>
    <string name="title_activity_action_pay">Payment</string>
    <string name="title_activity_item_info">Item Info</string>
    <string name="title_activity_item_list_info">Item Info</string>

    <string name="title_activity_hub">Hub</string>
    <string name="title_activity_stock_type_gen_stock">Generate Stock</string>
    <string name="title_activity_brand_gen_stock">Generate Stock</string>
    <string name="title_activity_print_tag">Print Tag</string>
    <string name="title_activity_verify_tag">Verify Tag</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_select">Select</string>
    <string name="navigation_select_group">Group</string>
    <string name="navigation_select_member">Member</string>

    <string name="navigation_action">Action</string>
    <string name="navigation_visit">Visit</string>
    <string name="navigation_direct_sale">Direct Sale</string>
    <string name="navigation_owner_detail_stock">Detailed Owner Ac</string>

    <string name="navigation_rest"> </string>
    <string name="navigation_auth_stock">Auth Ac</string>
    <string name="navigation_item_info">Item Info</string>
    <string name="navigation_logout">Logout</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="text_second_activity">Hi Its Second Activity Here</string>
    <string name="text_third_activity">Hi Its Third Activity</string>
    <string name="text_dismiss">Dismiss</string>

    <string name="password_hint"><font size="22">Password</font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
