<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--All the items added without any grouping-->

    <item
        android:id="@+id/select_menu"
        android:checkable="true"
        android:title="@string/navigation_select">
        <menu>
            <item
                android:id="@+id/navigation_select_group"
                android:checked="false"
                android:icon="@drawable/ic_number_1"
                android:title="@string/navigation_select_group" />
            <item
                android:id="@+id/navigation_select_member"
                android:checked="false"
                android:icon="@drawable/ic_number_2"
                android:title="@string/navigation_select_member" />
        </menu>
    </item>

    <item
        android:id="@+id/action_menu"
        android:checkable="true"
        android:title="@string/navigation_action">
        <menu>
            <item
                android:id="@+id/navigation_visit"
                android:checked="false"
                android:icon="@drawable/ic_number_3"
                android:title="@string/navigation_visit" />
            <item
                android:id="@+id/navigation_direct_sale"
                android:checked="false"
                android:icon="@drawable/ic_number_3"
                android:title="@string/navigation_direct_sale" />
            <item
                android:id="@+id/navigation_owner_detail_stock"
                android:checked="false"
                android:icon="@drawable/ic_number_3"
                android:title="@string/navigation_owner_detail_stock" />
        </menu>
    </item>

    <item
        android:id="@+id/rest_menu"
        android:checkable="true"
        android:title="@string/navigation_rest">
        <menu>
            <item
                android:id="@+id/navigation_auth_stock"
                android:checked="false"
                android:icon="@drawable/ic_number_0"
                android:title="@string/navigation_auth_stock" />
            <item
                android:id="@+id/navigation_item_info"
                android:checked="false"
                android:icon="@drawable/ic_number_0"
                android:title="@string/navigation_item_info" />
            <item
                android:id="@+id/navigation_logout"
                android:checked="false"
                android:icon="@drawable/ic_number_4"
                android:title="@string/navigation_logout" />
        </menu>
    </item>

</menu>